# Project3

./: .flake8  .gitignore  README.md  mylog.txt  pyproject.toml  report.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_card_number_generator_py.html  z_a44f0ac069e85531_test_decoratos_py.html  z_a44f0ac069e85531_test_filter_by_currency_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_transaction_descriptions_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  mylog.txt  processing.py  report.html  utils.py  widget.py
tests/: conftest.py  main.py  mylog.txt  test_card_number_generator.py  test_decoratos.py  test_external_api.py  test_filter_by_currency.py  test_masks.py  test_processing.py  test_read_json_transactions.py  test_transaction_descriptions.py  test_widget.py
